--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "mongoose": "^7.2.2",
     "next": "13.4.4",
     "next-connect": "^1.0.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2"
   }
 }
