--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seeder": "node utils/seeder"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "mongoose": "^7.2.2",
